# Advent-of-Code-2022

./: README.md  pyproject.toml
src/ivorius/aoc/: d1.py  d2.py
