[tool.poetry]
name = "iv-aoc-2022"
version = "0.1.0"
description = ""
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]
packages = [
    { include = "ivorius", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
